plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '7.0.0'
}

spotless {
    java {
        googleJavaFormat()
        target 'src/**/*.java'
    }
}

group = 'vn.edu.iuh.fit'
version = '0.0.1-SNAPSHOT'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

configurations {
    compileOnly { extendsFrom annotationProcessor }
}

repositories {
    // Chỉ cần Maven Central cho Spring AI 1.0.x
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    implementation "net.datafaker:datafaker:2.1.0"
    implementation "com.github.slugify:slugify:3.0.6"
    implementation "org.modelmapper:modelmapper:3.1.1"

    implementation "io.hypersistence:hypersistence-utils-hibernate-60:3.5.2"
    implementation "com.fasterxml.jackson.core:jackson-annotations"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-hibernate6"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"

    implementation "software.amazon.awssdk:s3:2.32.22"

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // ZXing
    implementation 'com.google.zxing:core:3.5.3'
    implementation 'com.google.zxing:javase:3.5.3'

    // Dotenv
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // ---- SPRING AI (GA) ----
    implementation platform('org.springframework.ai:spring-ai-bom:1.0.1')
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation group: 'vn.payos', name: 'payos-java', version: '1.0.3'
}

tasks.named('test') { useJUnitPlatform() }
